--- a/public/css/whack-a-mole.css
+++ b/public/css/whack-a-mole.css
@@ -9,8 +9,12 @@ html {
 .container {
     margin: 0 auto;
     width: 50%;
+    margin-left: 40%;
     max-width: 1200px;
     margin-top: 20px;
+    border-radius: 10%;
+    overflow: hidden;
+    cursor: url(/img/hammer.png), auto;
 }
 
 /*.row {
@@ -132,4 +136,16 @@ html {
 #buttonContainer {
     text-align: center;
 }
+
+body {
+    background-image: url("/img/simpsons_background.jpg");
+}
+
+#start {
+    float: left;
+    margin-top: 25%;
+    margin-left: 25%;
+}
+
+
 
