--- a/public/css/whack-a-mole.css
+++ b/public/css/whack-a-mole.css
@@ -11,7 +11,7 @@ html {
     width: 50%;
     margin-left: 40%;
     max-width: 1200px;
-    margin-top: 20px;
+    margin-top: 0px;
     border-radius: 10%;
     overflow: hidden;
     cursor: url(/img/hammer.png), auto;
@@ -142,10 +142,73 @@ body {
 }
 
 #start {
-    float: left;
-    margin-top: 25%;
-    margin-left: 25%;
+    position: relative;
+    background-color: #9E9E9E;
+    -webkit-border-radius: 10px;
+    border: none;
+    height: 80px;
+    width: 80px;
+    border-radius: 50px;
+    -webkit-box-shadow: 0px 8px 0px #878787, 0px 8px 20px #000000;
+    box-shadow: 0px 8px 0px #878787, 0px 8px 20px #000000;
+    color: #FFFFFF;
+    display: inline-block;
+    font-size: 25px;
+    padding: 2px 10px;
+    text-align: center;
+    text-decoration: none;
+    -webkit-transition: all 200ms ease;
+    -moz-transition: all 200ms ease;
+    -ms-transition: all 200ms ease;
+    -o-transition: all 200ms ease;
+    transition: all 200ms ease;
+    outline: none;
+    margin-left: -20%;
+    margin-top: 10%;
 }
+
+#start:active {
+    -webkit-box-shadow: 0px 2px 0px #878787, 0px 2px 8px #000000;
+    box-shadow: 0px 2px 0px #878787, 0px 2px 8px #000000;
+    top: 7px;
+}
+
+#hans {
+    height: 280px;
+    width: auto;
+    margin-left: 24%;
+    float: left;
+}
+
+#hansContainer {
+    float: left;
+    text-align: center;
+    width: 45%;
+}
+
+#title {
+    width: 70%;
+    height: auto;
+    font-size: 100px;
+    margin-top: 2%;
+    margin-left: auto;
+    margin-right: auto;
+    color: #ff9100;
+    font-family: 'Bangers', cursive;
+    text-shadow: 0 1px 0 #ccc,
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
+}
+
 
 
 
