--- a/public/css/whack-a-mole.css
+++ b/public/css/whack-a-mole.css
@@ -215,7 +215,37 @@ body {
 }
 
 #scoreTitle {
-    margin-top: 35px;
+    margin-top: 12px;
+}
+
+.gameOver {
+    visibility: hidden;
+    width: 70%;
+    height: auto;
+    font-size: 100px;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    color: #ff9100;
+    font-family: 'Bangers', cursive;
+    text-shadow: 0 1px 0 #ccc,
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
+}
+
+#gameOverContainer {
+    margin-top: 10%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
